- #6849 Auto-hide resets itself
- #6846 TLS certificate is not created by default for Synergy Enterprise.
- #6??? Systray Icon on Ubuntu Auto Start
- #6858 Application is blurry and unfocused on macOS

Enhancements:
- #6836 Enabling Github Code Scanning
- #6841 Windows installer has been updated.
- #6844 macOS installer has been updated.
- #6??? About Synergy logo refreshed

v1.12.x-snapshot
===========
Bug fixes:
- #6753 Fixed a number of vulnerabilities detected by static analysis
- #6567 Fixed Synergy spawning hundreds of zombie processes
- #6755 Fixed Vulnerability in vreadf function detected by Static analysis
- #6758 Account name with space on windows causes synergy to error when starting
- #6760 Synergy loses license when creating a System scope config
- #6342 Updated copyright year in version to use build date
- #6771 Added Ubuntu 16 to CI/CD
- #6804 Synergy loses edition when creating a System scope config
- #6660 + #6582 Add missing XAtom for utf-8 handling with Xorg
- #6814 The system asks to save twice. 
- #6817 Configure requires dns_sd.h for enterprise version
- #6826 + #6829 SonarCloud Critical bugs
- #6821 Blocker bugs found by sonar in synergy and in tests
- #6825 The system requires google test even when tests are disabled with BUILD_TESTS=OFF
- #6832 TLS certificate error on macOS system
- #6835 Create TLS certificate during upgrade

Enhancements:
- #6750 Integrate SonarCloud for static analysis and test coverage
- #6792 License key expiry
- #6799 Synergy "Business" edition
- #6803 Update Synergy icons
- #6800 Update behaviour when unregistered
- #6806 Move to Github Action for general PR builds and tests
- #6816 Improve license key validation

v1.12.0-stable
===========

Bug fixes:
- #6748 Copyright year in about dialog isn't updated

v1.12.0-rc2
===========

Bug fixes:
- #6730 Updating synergy looses settings
- #6734 Fixed naming of installers for linux and windows
- #6743 Azure build git revision showing as 0badc0de

Enhancements: