@@ -14,6 +14,7 @@ Enhancements:
 - #6841 Windows installer has been updated.
 - #6844 macOS installer has been updated.
 - #6??? About Synergy logo refreshed
+- #6867 Create only 1 artefact for macOS
 
 v1.12.x-snapshot
 ===========
